# sting

./: .gitignore  Cargo.toml  EVAL.md  LEARNING.md  LICENSE  README.md  tools.json
.github/workflows/: ci.yml
finetune/: README.md  convert_to_safetensors.py  export_tokenizer_spec.py  gen_data.py  retrieval_hitrate.py  run_finetune.py  train_head.py
hf/: README.md
model/: config.json  tokenizer_spec.json
scripts/: README.md  bench.sh  hf-upload.sh  regression.sh  sting_tool.py  termux-install.sh
scripts/golden/: corpus.txt  outputs.golden  queries.txt  tokens.golden
src/: dispatch.rs  error.rs  generate.rs  main.rs  model.rs  retrieval.rs  tokenizer.rs  tools.rs
